// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlossaryEditorPageHeaderComponent matches snapshot 1`] = `
<div
  className="profile-content-inner-container glossary-editor-page-header"
>
  <div
    className="usa-grid-full glossary-header-container"
  >
    <div>
      <h2
        className="hello-greeting"
      >
        Glossary Editor
      </h2>
    </div>
    <div
      className="create-term-container"
    >
      <button
        onClick={[Function]}
      >
        Create term
      </button>
    </div>
  </div>
</div>
`;

exports[`GlossaryEditorPageHeaderComponent matches snapshot when glossaryPostSuccess is true 1`] = `
<div
  className="profile-content-inner-container glossary-editor-page-header"
>
  <div
    className="usa-grid-full glossary-header-container"
  >
    <div>
      <h2
        className="hello-greeting"
      >
        Glossary Editor
      </h2>
    </div>
    <div
      className="create-term-container"
    >
      <button
        onClick={[Function]}
      >
        Create term
      </button>
    </div>
  </div>
  <Alert
    customClassName=""
    isAriaLive={true}
    isDivided={false}
    messages={
      Array [
        Object {
          "body": "Successfully added term!",
        },
      ]
    }
    tinyAlert={false}
    title="Success"
    type="success"
  />
</div>
`;

exports[`GlossaryEditorPageHeaderComponent matches snapshot when showNewTerm is true 1`] = `
<div
  className="profile-content-inner-container glossary-editor-page-header"
>
  <div
    className="usa-grid-full glossary-header-container"
  >
    <div>
      <h2
        className="hello-greeting"
      >
        Glossary Editor
      </h2>
    </div>
    <div
      className="create-term-container"
    >
      <button
        onClick={[Function]}
      >
        Create term
      </button>
    </div>
  </div>
  <div
    className="usa-grid-full editor-container"
  >
    <div
      className="usa-width-one-whole glossary-editor-card-container"
    >
      <GlossaryEditorCard
        hasErrored={Object {}}
        isNewTerm={true}
        onCancel={[Function]}
        onSuccess={Object {}}
        submitGlossaryTerm={[Function]}
        term={Object {}}
      />
    </div>
  </div>
</div>
`;
